# sched-bird

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-proxy  README.md  docker-compose.yaml  run.sh
config/: envoy.yaml
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs
proxy/config/: envoy.yaml
server/: Cargo.toml  Dockerfile  README.md  index.html
server/src/: auth.rs  db.rs  lib.rs  main.rs  render.rs  sched.rs
server/src/components/: footer.rs  item.rs  login.rs  mod.rs  nav.rs
server/src/pages/: home.rs  not_found.rs
src/: main.rs
