[package]
name = "sched-bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hydrate"
required-features = ["hydration"]

[[bin]]
name = "app"
required-features = ["ssr"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
yew = { version = "0.20.0", features = ["ssr"] }
reqwest = { version = "0.11.18", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
uuid = { version = "1.3.3", features = ["serde"] }
futures = "0.3.28"
bytes = "1.4.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.36"
wasm-logger = "0.2.0"
log = "0.4.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["full"] }
axum = { version = "0.6.18" }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tower-cookies = "0.9.0"
scylla = { version = "0.8.1" }
oauth2 = { version = "4.4.0" }
url = { version = "2.3.1" }
http-body = "0.4.5"
openssl-probe = "0.1.5"
octocrab = "0.23.0"
chrono = "0.4.26"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
