[package]
name = "sched-bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hydrate"
required-features = ["hydration"]

[[bin]]
name = "app"
required-features = ["ssr"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
yew = { version = "0.20", features = ["ssr"] }
yew-router = "0.17"
log = "0.4"
stylist = { version = "0.12", features = ["yew_integration"] }
futures = { version = "0.3", features = ["std"], default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
axum = "0.6"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs"] }
tower-cookies = "0.9.0"
scylla = { version = "0.8.1" }
oauth2 = { version = "4.4.0" }
url = { version = "2.3.1" }
http-body = "0.4.5"
octocrab = "0.23.0"
chrono = "0.4.26"
hyper = { version = "0.14", features = ["server", "http1"] }
env_logger = "0.10"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
